--- a/StrikingInvestigation/Pages/GapTest.razor
+++ b/StrikingInvestigation/Pages/GapTest.razor
@@ -2,12 +2,12 @@
 @using StrikingInvestigation.Models
 @using StrikingInvestigation.Utilities
 
-<div class="container mx-0 mx-md-2 my-1 my-md-3">
-    <div style="float: right">(@testSpec.BrowserWidth, @testSpec.BrowserHeight)</div>
+<div>
+    <div style="margin-right: 10px; float: right">(@testSpec.BrowserWidth, @testSpec.BrowserHeight)</div>
 
-    <h1>Gap Test</h1>
+    <h1 style="margin-left: 10px">Gap Test</h1>
 
-    <p>Adjust the test bell until you think it is striking at the correct time.</p>
+    <p style="margin-left: 10px">Adjust the test bell until you think it is striking at the correct time.</p>
 
     @if (gapTestsData == null)
     {
@@ -16,7 +16,8 @@
     else
     {
         <EditForm Model="@testSpec">
-            <div style="display: inline-block">
+            <div style="display: inline-block;
+                    margin-left: 10px">
                 <div class="form-group">
                     <label>
                         Select Test
@@ -40,7 +41,8 @@
 
             @if (testSpec.SelectedTest == 0)
             {
-                <div style="display: inline-block">
+                <div style="display: inline-block;
+                        margin-left: 10px">
                     <div class="form-group">
                         <label>
                             Stage
@@ -59,7 +61,8 @@
                     </div>
                 </div>
 
-                <div style="display: inline-block">
+                <div style="display: inline-block;
+                        margin-left: 10px">
                     <div class="form-group">
                         <label>
                             Tenor weight
@@ -76,7 +79,8 @@
                     </div>
                 </div>
 
-                <div style="display: inline-block">
+                <div style="display: inline-block;
+                        margin-left: 10px">
                     <div class="form-group">
                         <label>
                             Number of rows
@@ -95,7 +99,8 @@
                     </div>
                 </div>
 
-                <div style="display: inline-block">
+                <div style="display: inline-block;
+                        margin-left: 10px">
                     <div class="form-group">
                         <label>
                             Max error size
@@ -114,7 +119,8 @@
                     </div>
                 </div>
 
-                <div style="display: inline-block">
+                <div style="display: inline-block;
+                        margin-left: 10px">
                     <div class="form-group">
                         <label>
                             Test bell location
@@ -133,7 +139,8 @@
                     </div>
                 </div>
 
-                <div style="display: inline-block">
+                <div style="display: inline-block;
+                        margin-left: 10px">
                     <button class="btn btn-primary"
                             @onclick="Create"
                             disabled="@testSpec.ControlsDisabled">
@@ -143,148 +150,164 @@
             
                 @if (blowSet != null)
                 {
-                    <div style="display: inline-block">
+                    <div style="display: inline-block;
+                            margin-left: 10px;
+                            margin-top: 1px;
+                            vertical-align: top">
                         <div class="form-group">
                             <label>
                                 Show gap times
                             </label>
 
-                            <InputCheckbox Value="@testSpec.ShowGaps"
-                                            ValueChanged="@( (bool value) => ShowGapsChanged(value) )"
-                                            ValueExpression="@( () => testSpec.ShowGaps )"
-                                            class="form-control"
-                                            disabled="@testSpec.ControlsDisabled" />
+                            <div>
+                                <InputCheckbox Value="@testSpec.ShowGaps"
+                                        ValueChanged="@( (bool value) => ShowGapsChanged(value) )"
+                                        ValueExpression="@( () => testSpec.ShowGaps )"
+                                        class="form-check-input"
+                                        style="margin-left: 50px;
+                                                margin-top: 8px;
+                                                width: 22px;
+                                                height: 22px"
+                                        disabled="@testSpec.ControlsDisabled" />
+                            </div>
                         </div>
                     </div>
 
-                    <div style="display: inline-block">
+                    <div style="display: inline-block;
+                            margin-left: 10px">
                         <div class="form-group">
                             <label>
                                 Save test
                             </label>
 
-                            <button class="btn btn-primary"
-                                    @onclick="Save"
-                                    disabled="@testSpec.ControlsDisabled">
-                                @testSpec.SaveLabel
-                            </button>
+                            <div>
+                                <button class="btn btn-primary"
+                                        @onclick="Save"
+                                        disabled="@testSpec.ControlsDisabled">
+                                    @testSpec.SaveLabel
+                                </button>
 
-                            @if (testSpec.SpinnerSaving == true)
-                            {
-                                <div class="spinnerinline"
-                                        style="display: inline-block;
-                                        vertical-align: top;
-                                        margin-left: 12px;
-                                        margin-top: 7px;
-                                        --borderwidth: 5px;
-                                        --width: 24px;
-                                        --height: 24px">
-                                </div>
-                            }
+                                @if (testSpec.SpinnerSaving == true)
+                                {
+                                    <div class="spinnerinline"
+                                            style="display: inline-block;
+                                            vertical-align: top;
+                                            margin-left: 12px;
+                                            margin-top: 7px;
+                                            --borderwidth: 5px;
+                                            --width: 24px;
+                                            --height: 24px">
+                                    </div>
+                                }
 
-                            @if (testSpec.Saved == true)
-                            {
-                                <div style="display: inline-block;
-                                        vertical-align: top;
-                                        margin-left: 12px;
-                                        margin-top: 7px">
-                                    Saved
-                                </div>
-                            }
+                                @if (testSpec.Saved == true)
+                                {
+                                    <div style="display: inline-block;
+                                            vertical-align: top;
+                                            margin-left: 12px;
+                                            margin-top: 7px">
+                                        Saved
+                                    </div>
+                                }
+                            </div>
                         </div>
                     </div>
                 }
             }
             else if (testSpec.SelectedTest != -1)
             {
-                <div>
-                    <div style="display: inline-block">
-                        <div class="form-group">
-                            <label>
-                                Stage
-                            </label>
+                <div style="display: inline-block;
+                        margin-left: 10px">
+                    <div class="form-group">
+                        <label>
+                            Stage
+                        </label>
 
-                            <div style="border: 1px solid #ced4da;
-                                    border-radius: 4px;
-                                    padding-left: 16px;
-                                    padding-top: 7px">
-                                <label>
-                                    @StageConv.StageStr(testSpec.Stage)
-                                </label>
-                            </div>
+                        <div style="border: 1px solid #ced4da;
+                                border-radius: 4px;
+                                padding-left: 16px;
+                                padding-right: 16px;
+                                padding-top: 7px">
+                            <label>
+                                @StageConv.StageStr(testSpec.Stage)
+                            </label>
                         </div>
                     </div>
+                </div>
 
-                    <div style="display: inline-block">
-                        <div class="form-group">
+                <div style="display: inline-block;
+                        margin-left: 10px">
+                    <div class="form-group">
+                        <label>
+                            Tenor weight
+                        </label>
+
+                        <div style="border: 1px solid #ced4da;
+                                border-radius: 4px;
+                                padding-left: 16px;
+                                padding-right: 16px;
+                                padding-top: 7px">
                             <label>
-                                Tenor weight
+                                @TenorWeightConv.TenorWeightStr(testSpec.TenorWeight)
                             </label>
-
-                            <div style="border: 1px solid #ced4da;
-                                    border-radius: 4px;
-                                    padding-left: 16px;
-                                    padding-top: 7px">
-                                <label>
-                                    @TenorWeightConv.TenorWeightStr(testSpec.TenorWeight)
-                                </label>
-                            </div>
                         </div>
                     </div>
+                </div>
 
-                    <div style="display: inline-block">
-                        <div class="form-group">
+                <div style="display: inline-block;
+                        margin-left: 10px">
+                    <div class="form-group">
+                        <label>
+                            Number of rows
+                        </label>
+
+                        <div style="border: 1px solid #ced4da;
+                                border-radius: 4px;
+                                padding-left: 16px;
+                                padding-right: 16px;
+                                padding-top: 7px">
                             <label>
-                                Number of rows
+                                @testSpec.NumRows
                             </label>
-
-                            <div style="border: 1px solid #ced4da;
-                                    border-radius: 4px;
-                                    padding-left: 16px;
-                                    padding-top: 7px">
-                                <label>
-                                    @testSpec.NumRows
-                                </label>
-                            </div>
                         </div>
                     </div>
                 </div>
             }
         </EditForm>
     }
-</div>
 
-<div style="position: relative" tabindex="0" @onkeydown="ArrowKeys" @ref="mainDiv">
-    @if (blowSet != null)
-    {
-        @foreach (Blow blow in blowSet.Blows)
+    <div style="position: relative" tabindex="0" @onkeydown="ArrowKeys" @ref="mainDiv">
+        @if (blowSet != null)
         {
-            // Place labels if it's the first blow of the row
-            if (blow.Place == 1)
+            @foreach (Blow blow in blowSet.Blows)
             {
-                <RowStartLabel TestSpec="@testSpec"
-                        Blow="@blow"
-                        Screen="@screen" />
-            }
+                // Place labels if it's the first blow of the row
+                if (blow.Place == 1)
+                {
+                    <RowStartLabel TestSpec="@testSpec"
+                            Blow="@blow"
+                            Screen="@screen" />
+                }
             
-            <Bell TestSpec="@testSpec"
-                    Blow="@blow"
+                <Bell TestSpec="@testSpec"
+                        Blow="@blow"
+                        Screen="@screen"
+                        Callback="ProcessCallback" />
+
+                <audio id="@blow.AudioId" preload="auto">
+                    <source src="@blow.BellSound" type="audio/mpeg" />
+                </audio>
+            }
+
+            <Play TestSpec="@testSpec"
+                    Blow="@blowSet.Blows.Last()"
                     Screen="@screen"
                     Callback="ProcessCallback" />
 
-            <audio id="@blow.AudioId" preload="auto">
-                <source src="@blow.BellSound" type="audio/mpeg" />
-            </audio>
+            <Submit TestSpec="@testSpec"
+                    Blow="@blowSet.Blows.Last()"
+                    Screen="@screen"
+                    Callback="ProcessCallback" />
         }
-
-        <Play TestSpec="@testSpec"
-                Blow="@blowSet.Blows.Last()"
-                Screen="@screen"
-                Callback="ProcessCallback" />
-
-        <Submit TestSpec="@testSpec"
-                Blow="@blowSet.Blows.Last()"
-                Screen="@screen"
-                Callback="ProcessCallback" />
-    }
+    </div>
 </div>
